fix color title name on light theme on mobile

--- a/src/pages/AnimePage/components/AnimePageMobile/styles.module.scss
+++ b/src/pages/AnimePage/components/AnimePageMobile/styles.module.scss
@@ -29,6 +29,7 @@
   height: fit-content;
   padding: 0 5px 5px 5px;
   background: #0759a4;
+  color: white !important;
 }
 
 .enTitle {
